--- a/assets/css/_docs.scss
+++ b/assets/css/_docs.scss
@@ -130,6 +130,7 @@ html.docs {
     display: flex;
     flex: 1 1 auto;
     overflow: hidden;
+    position: relative;
     width: 100%;
   }
 
